src/tools/dmlc/test/1.4/errors/T_ESYNTAX_old_array_2.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

/// ERROR ESYNTAX
bank b[j in 0..1];
